fix contact spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,10 +135,6 @@ body {
   margin-right: 0.75rem;
 }
 
-.contact-right-padding {
-  padding-right: 4rem;
-}
-
 .fab {
   padding: 1rem;
   width: 4rem;
